# you-com-rs

./: Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: CI.yml  Doc.yml
search.desc/you_com/: you_com-desc-0-.js
search.desc/you_com_py/: you_com_py-desc-0-.js
src/you_com/: client.rs.html  lib.rs.html  model.rs.html
src/you_com_py/: lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/futures_core/stream/: trait.Stream.js
trait.impl/pyo3/conversion/: trait.IntoPy.js
trait.impl/pyo3/impl_/extract_argument/: trait.PyFunctionArgument.js
trait.impl/pyo3/impl_/pyclass/: trait.PyClassImpl.js  trait.PyMethods.js
trait.impl/pyo3/pyclass/: trait.PyClass.js
trait.impl/pyo3/type_object/: trait.HasPyGilRef.js  trait.PyTypeInfo.js
trait.impl/pyo3/types/: trait.DerefToPyAny.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
you-com/: Cargo.toml
you-com-py/: Cargo.toml  pyproject.toml
you-com-py/src/: lib.rs
you-com/reference/: chat.sh  maybe-prompt.txt
you-com/src/: client.rs  lib.rs  model.rs
you_com/: all.html  enum.ChatEvent.html  enum.Error.html  index.html  sidebar-items.js  struct.ChatMessage.html  struct.ChatResponseStream.html  struct.Client.html
you_com/client/: struct.Client.html
you_com/model/: enum.ChatEvent.html  struct.ChatMessage.html  struct.ChatResponseStream.html
you_com_py/: all.html  index.html  sidebar-items.js  struct.ChatResponseStream.html
