[package]
name = "you-com-py"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "you_com_py"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
once_cell = "1.20.1"
pyo3 = { version = "0.22.3", features = [ "abi3", "abi3-py37", "anyhow", "extension-module" ] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.16"
you-com = { version = "0.0.0", path = "../you-com" }
