[package]
name = "you-com-py"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "you_com_py"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
once_cell = "1.20.2"
pyo3 = { version = "0.22.5", features = [ "abi3", "abi3-py37", "anyhow", "extension-module" ] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.16"
you-com = { version = "0.0.0", path = "../you-com" }
